--- a/CodingNepal/calendar/style.css
+++ b/CodingNepal/calendar/style.css
@@ -103,11 +103,14 @@ header .icons span:last-child {
     transform: translate(-50%, -50%);
     /* background: #f2f2f2; */
 }
-
+/* 
 .days li:hover::before {
     background: #f2f2f2;
-}
+} */
 
+.days li.hover {
+    background: #f2f2f2;
+}
 .days li.active::before {
     background: #9B59B6;
 }
